--- a/index.html
+++ b/index.html
@@ -30,5 +30,6 @@
       crossorigin="anonymous"
     ></script>
     <script src="index.js"></script>
+    <p style="text-align: center;">Jas 13 studio ⚒ </p>
   </body>
 </html>
